--- a/translations/en.json
+++ b/translations/en.json
@@ -31,13 +31,13 @@
         },
         "aboutMeWrapper": {
             "header": {
-                "h2": "O mnie",
+                "h2": "About me",
                 "p": "Pełen zestaw informacji na mój temat"
             }
         },
         "servicesWrapper": {
             "header": {
-                "h2": "Usługi",
+                "h2": "Services",
                 "p": "Sprawdź co mogę ci zaoferować"
             }
         },
@@ -49,10 +49,10 @@
         },
         "contactWrapper": {
             "header": {
-                "h2": "Kontakt",
+                "h2": "Contact",
                 "p": [
-                    "Jeżeli masz jakieś pytania skontaktuj się zemną.",
-                    "Wybór należy do ciebie z jakiej formy kontaktu skorzystasz."
+                    "Jeżeli masz jakieś pytania skontaktuj się zemną,",
+                    "wybór należy do ciebie z jakiej formy kontaktu skorzystasz"
                 ]
             }
         }
