Sass & Pug files changes

--- a/translations/en.json
+++ b/translations/en.json
@@ -50,10 +50,7 @@
         "contactWrapper": {
             "header": {
                 "h2": "Contact",
-                "p": [
-                    "Jeżeli masz jakieś pytania skontaktuj się zemną,",
-                    "wybór należy do ciebie z jakiej formy kontaktu skorzystasz"
-                ]
+                "p": "Jeżeli masz jakieś pytania skontaktuj się zemną"
             }
         }
 
