--- a/translations/en.json
+++ b/translations/en.json
@@ -58,7 +58,7 @@
                 },
                 "birthDate": {
                     "title": "Birth date",
-                    "description": "07-01-1993 yr."
+                    "description": "07.01.1993 yr."
                 },
                 "email": {
                     "title": "E-mail",
@@ -77,15 +77,90 @@
                 "h3": [
                     "Attributes",
                     "and qualities"
-                ]
+                ],
+                "whatAmILike": {
+                    "title": "Jaki jestem",
+                    "array": [
+                        "Dokładny",
+                        "Odpowiedzialny",
+                        "Rzetelny",
+                        "Samodzielny",
+                        "Terminowy"
+                    ]
+                },
+                "inWhatAmIGood": {
+                    "title": "W czym jestem dobry",
+                    "array": [
+                        "Dzielę się wiedzą",
+                        "Potrafię szukać",
+                        "Przyjmuję krytykę",
+                        "Skupiam sie na celach",
+                        "Współpracuję w zespole, komunikuję się"
+                    ]
+                }
             },
             "education": {
-                "h3": "Education"
+                "h3": "Education",
+                "timelinePoints": [
+                    {
+                        "period": "10.2015 - Obecnie",
+                        "title": "Edukacja indywidualna",
+                        "description": "Nauka zagadnień zwianych z szeroko pojętym front-endu internetowym i web designem."
+                    },
+                    {
+                        "period": "09.2012 - Obecnie",
+                        "title": "Wykształcenie: Wyższe",
+                        "description": "Studia inżynierskie w Szkole Głównej Gospodarstwa Wiejskiego w Warszawie, kierunek: Informatyka, specjalizacja: Systemy komputerowe."
+                    },
+                    {
+                        "period": "09.2009 - 06.2012",
+                        "title": "Wykształcenie: Średnie",
+                        "description": "Ukończenie nauki w Liceum Ogólnokształcącym im. Marii Sadzewiczowej w Łochowie na profilu matematyczno-informatycznym."
+                    }
+                ]
             },
             "experiencesCourses": {
                 "h3": [
                     "Experiences",
                     "and courses"
+                ],
+                "timelinePoints": [
+                    {
+                        "period": "01.2017 - Obecnie",
+                        "title": "Front-End Developer / Freelancer",
+                        "description": "Wykonywanie różnego rodzaju zleceń zdalnie dla klientów pozyskanych za pośrednictwem sieci.",
+                        "link": "https://github.com/mateuszarchicinski/mateusz-archicinski.pl",
+                        "linkIconName": "github",
+                        "linkIconColor": "github"
+                    },
+                    {
+                        "period": "04.2016 - 01.2017",
+                        "title": "Web Content Editor w K2 Internet S.A.",
+                        "description": "Do głównych obowiązków zaliczało się obsługiwanie różnorodnych systemów zarządzania treścią w sieci, tworzenie stron kampanijno-produktowych typu landing page, long page i mailingów a także automatyzacja pracy za pomocą skryptów po stronie serwera/klienta js/nodejs."
+                    },
+                    {
+                        "period": "30.11.2015 - 18.12.2015",
+                        "title": "Pracownik biurowy / Praktykant",
+                        "description": "Praktyka studencka odbywana w Głównym Urzędzie Statystycznym w Warszawie, wykonywane czynności: tester systemu szkoleń wewnętrznych dla pracowników GUS z dostępem do cms'a Moodle."
+                    },
+                    {
+                        "period": "02.11.2015 - 27.11.2015",
+                        "title": "Pracownik biurowy",
+                        "description": "Zatrudnienie na umowe zlecenie w Kancelari Adwokackiej, wykonywane czynności: prace biurowe."
+                    },
+                    {
+                        "period": "10.2015 - Obecnie",
+                        "title": "Projekty / W ramach nauki",
+                        "description": "Wykonane i udostępnione projekty  w ramach nauki różnych technologii na moim Githubie.",
+                        "link": "https://github.com/mateuszarchicinski?tab=repositories",
+                        "linkIconName": "github",
+                        "linkIconColor": "github"
+                    },
+                    {
+                        "period": "10.2015 - Obecnie",
+                        "title": "Kursy internetowe",
+                        "description": "Ukończenie dużej ilości kursów internetowych z zakresu: HTML5, Pug, CSS3, Less, Sass, Bootstrap, Materialize, Foundation, RWD, JS, jQuery, AngularJS, Angular Material, NodeJS, NPM, MongoDB, PHP, MySql, Git i Photoshop."
+                    }
                 ]
             },
             "skillsTechnologies": {
